# PlaceHolder

./: INFO.md  README.md  plot_comparison.py  pyproject.toml
ExamplesForPlotting/ataques-fedavg/: ALIE.csv  InversãoDeSinal.csv  RuídoGaussiano.csv  TreinamentoBenigno.csv
ExamplesForPlotting/ataques-krum/: ALIE.csv  InversãoDeSinal.csv  RuídoGaussiano.csv
ExamplesForPlotting/ataques-trimmedmean/: ALIE.csv  InversãoDeSinal.csv  RuídoGaussiano.csv
quickstart-pytorch/: client_app.py  server_app.py
