[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.1.1"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = {file = "LICENSE"}
dependencies = [
    "flwr[simulation]>=1.28.0",
    "flwr-datasets[vision]>=0.6.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"
fab-format-version = 1
flwr-version-target = "1.29.0"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-evaluate = 0.5
local-epochs = 1
learning-rate = 0.01
batch-size = 32

malicious-fraction = 0.4
attack-type = "gaussian"

# Parâmetros dos ataques (descomente e ajuste conforme necessário)
# gaussian-noise-std = 0.6      # desvio padrão do ruído gaussiano (padrão: 1.0)
# flip-top-fraction = 0.2       # fração dos maiores pesos a inverter no sign flip (padrão: 1.0)
# alie-z-max = 0.674            # z-score do ALIE; se omitido, calculado automaticamente

# Estratégia de agregação: "fedavg" | "multikrum" | "fedtrimmedavg" (padrão: "fedavg")
aggregation-strategy = "fedavg"
# multikrum-num-malicious = 8   # obrigatório se aggregation-strategy = "multikrum"
